style.css
/* General */

html, body {
    height: 100%;
    min-height: 500px;
}

body {
    margin: 0;
    font-family: 'Roboto', sans-serif;
}

h1 {
    margin-top: 0;
    margin-bottom: 30px;
    color: white;
    font-weight: 700;
    font-size: 32pt;
}

h2 {
    margin-top: 0;
    margin-bottom: 15px;
    font-weight: 300;
    font-size: 24pt;
}

h3 {
    margin-top: 0;
    margin-bottom: 15px;
    font-style: italic;
    font-weight: 100;
    font-size: 24pt;
}

h4 {
    margin: 15px 0px;
    color: white;
    font-weight: 300;
    font-size: 18pt;
}

h5 {
    margin: 10px 0px;
    font-weight: 500;
    font-size: 14pt;
    cursor: pointer;
}

em {
    margin-bottom: 20px;
    font-weight: 100;
}

p {
    margin: 0px 0px;
    font-weight: 300;
}

/* DOM */

#page-wrapper {
    height: 100%;
    display: flex;
    flex-direction: column;
}

#progress-bar-mobile {
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    height: 5px;
    background: #caa53e;
}

#button-nav {
    position: fixed;
    z-index: 2;
    top: 15px;
    right: 15px;
    height: 30px;
    width: 30px;
    cursor: pointer;
}

.nav-bar {
    position: absolute;
    height: 4px;
    width: 100%;
    background: #fff;
}

#top-bar {
    top: 3px;
}

#middle-bar {
    top: 13px;
}

#bottom-bar {
    top: 23px;
}

#middle-bar.open {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -o-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
    -webkit-transition: .25s;
    -moz-transition: .25s;
    -o-transition: .25s;
    -ms-transition: .25s;
    transition: .25s;
}

#middle-bar.exit {
    -webkit-transform: rotate(-45deg);
    -moz-transform: rotate(-5deg);
    -o-transform: rotate(-45deg);
    -ms-transform: rotate(-45deg);
    transform: rotate(-45deg);
    -webkit-transition: .25s;
    -moz-transition: .25s;
    -o-transition: .25s;
    -ms-transition: .25s;
    transition: .25s;
}


#top-bar.exit, #bottom-bar.exit {
    top: 13px;
    -webkit-transform: rotate(45deg);
    -moz-transform: rotate(45deg);
    -o-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    transform: rotate(45deg);
    -webkit-transition: .25s;
    -moz-transition: .25s;
    -o-transition: .25s;
    -ms-transition: .25s;
    transition: .25s;
}

#top-bar.open {
    top: 3px;
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -o-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
    -webkit-transition: .25s;
    -moz-transition: .25s;
    -o-transition: .25s;
    -ms-transition: .25s;
    transition: .25s;
}

#bottom-bar.open  {
    top: 23px;
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -o-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
    -webkit-transition: .25s;
    -moz-transition: .25s;
    -o-transition: .25s;
    -ms-transition: .25s;
    transition: .25s;
}


aside {
    position: fixed;
    z-index: 1;
    height: 100%;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    background: #000;
}

#aside-wrapper {
    display: flex;
    flex-direction: column;
}

#links {
    display: flex;
}

#progress-bar {
    width: 10px;
    margin-right: 20px;
    background: #caa53e;
}

.link {
    cursor: pointer;
}

.link:hover {
    font-weight: 500;
}

.active {
    font-weight: 500;
}

/* Main */

main {
    height: 100%;
    overflow-y: auto;
    scroll-behavior: smooth;
}

#main-wrapper {
    position: relative;
    margin: 0 60px;
    overflow: hidden;
}

section {
    margin-top: 40px;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.underline {
    height: 10px;
    width: 50px;
    margin-bottom: 20px;
    flex-shrink: 0;
    background: #caa53e;
}

.button-outline {
    margin-bottom: 20px;
    padding: 10px 20px;
    align-self: center;
    border: 3px solid #000;
    background-color: #fff;
    font-size: 12pt;
    font-weight: 300;
    cursor: pointer;
}

.button-outline:focus {
    outline: none;
}

/* About */

#about-wrapper {
    margin-bottom: 40px;
    display: flex;
    flex-direction: column;
}

#about-media {
    width: 100%;
    min-width: 150px;
    margin-bottom: 40px;
}

#headshot {
    width: 100%;
    height: auto;
    margin-bottom: 20px;
}

#about-icons {
    display: flex;
    justify-content: center;
    cursor: pointer;
}

#middle-icon {
    margin: 0 10px;
}

#about-content {
    display: flex;
    flex-direction: column;
    width: 100%;
}

.contact {
    font-weight: 100;
    color: #000;
    text-decoration: none;
}

/* Code */

#code-wrapper {
    margin-bottom: 40px;
    display: flex;
}

/* Design */

.grid {
    margin-bottom: 40px;
    display: grid;
    grid-template-columns: 1fr;
    grid-auto-rows: auto;
    grid-gap: 10px;
}

.panel {
    width: 100%;
    min-width: 100px;
    padding-top: 100%;
    background: #000;
    cursor: pointer;
}

/* Music */

#first-song, #second-song {
    margin-bottom: 20px;
}

#third-song {
    margin-bottom: 40px;
}

/* Blog */

#blog-wrapper {
    margin-bottom: 40px;
}

.blog-post {
    display: flex;
    margin-bottom: 20px;
}

.blog-content {
    margin-right: 20px;
    flex-grow: 1;
    height: 100px;
    overflow: hidden;
}

.blog-image {
    width: 100px;
    height: 100px;
    background: #000;
    flex-shrink: 0;
    cursor: pointer;
}

@media (min-width: 1000px)
{
    /* General */

    h1 {
        font-size: 40pt;
    }

    h2 {
        font-size: 32pt;
    }

    h3 {
        font-size: 32pt;
    }

    h4 {
        font-size: 18pt;
    }

    /* DOM */

    #page-wrapper {
        flex-direction: row;
        height: 100%;
    }

    #progress-bar-mobile {
        display: none;
    }

    #button-nav {
        display: none;
    }

    /* Aside */

    aside {
        position: relative;
        height: auto;
        width: 35%;
        min-width: 350px;
    }

    /* Main */

    main {
        width: 65%;
    }

    #main-wrapper {
        width: 80%;
        margin: 0 auto;
    }

    section {
        margin-top: 0px;
        height: 100vh;
    }
}

@media (min-width: 500px)
{
    /* About */ 

    #about-wrapper {
        flex-direction: row;
    }

    #about-media {
        width: 30%;
        margin-bottom: 0px;
    }

    #about-content {
        padding-left: 40px;
        width: 70%;
        justify-content: center;
    }

    /* Design */

    .grid {
        grid-template-columns: 1fr 1fr 1fr;
    }
}

